drrx/fixtures/positive/positive-fw02-continuity-ok.tree.drrx
.                         # root
+ -- dir/
  |+== a.txt               # continuity '|' present; sibling follows
    :== b.txt               # last sibling at this depth; no '|'
