drrx/fixtures/invalid/invalid-fw02-missing-continuity.tree.drrx
.                  # root
+-- dir/
  +== a.txt       # EXPECT: FW.02 (missing '|' with following sibling)
  :== b.txt
